--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toolpad/core": "^0.12.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.11",
     "tailwind-merge": "^2.3.0",
@@ -61,7 +63,7 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.4"
   }
 }
