--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "flowbite-react": "^0.9.0",
     "framer-motion": "^11.2.12",
     "lucide-react": "^0.390.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
@@ -33,6 +34,7 @@
     "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.11",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4",
